--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WeatherForecast</string>
+    <string name="home_screen">Прогноз по городам</string>
+    <string name="add_city">Добавить</string>
+    <string name="add_city_label">Название города</string>
 </resources>
